# astra-suite

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  test-plan-week-2026-05-08.md
.claude/: scheduled_tasks.json
.github/workflows/: ci.yml  release-docker.yml  release.yml
bridges/whatsapp-baileys/: README.md  index.js  package-lock.json  package.json
crates/astra/: Cargo.toml
crates/astra-gateway/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  claude-gateway-hooks.json  gateway-claude-minimal.yaml  gateway-wecom-claude.yaml  gateway.example.yaml  setup.sh
crates/astra-gateway/docs/: wecom-webhook-cron.md
crates/astra-gateway/skills/: gateway.md
crates/astra-gateway/src/: access_control.rs  cli_bridge.rs  cli_pool.rs  codex_app_pool.rs  commands.rs  config.rs  dedup.rs  durable_task_store.rs  gateway_context.rs  github_tokens.rs  health.rs  inbound_attachments.rs  inject_server.rs  lib.rs  main.rs  markdown.rs  model_vision.rs  runner.rs  runtime_api.rs  scheduler.rs  session_policy.rs  storage.rs  text.rs  trace_model.rs  usage.rs  weixin_media.rs  whatsapp_bridge.rs  workspace.rs
crates/astra-gateway/src/mcp/: config.rs  mod.rs  server.rs  tools_cron.rs  tools_skills.rs  tools_tasks.rs  tools_workspace.rs
crates/astra-gateway/src/native_rust/: client.rs  history.rs  loop_runner.rs  mod.rs
crates/astra-gateway/src/native_rust/tools/: bash.rs  mod.rs
crates/astra-gateway/src/store/: file.rs  mod.rs  mysql.rs  sqlite.rs
crates/astra-gateway/tests/: durable_task_e2e.rs  e2e_cli_bridge.rs  integration_runner.rs  offline_cli_bridge.rs
crates/astra-gateway/tests/fixtures/: astra_hello.json  astra_tool.json  claude_hello.json  copilot_hello.jsonl
crates/astra-task-store/: Cargo.toml
crates/astra-task-store/src/: lib.rs
crates/astra/src/: client.rs  edge.rs  error.rs  lib.rs  paths.rs  protocol.rs  sse.rs
deployment/astra-stack/: .env.example  .models.example.yaml  README.md  docker-compose.yml  matrixone-entrypoint.sh
docs/: design-mcp-gateway-tools.md  gateway.md  install-astra-cli.md  local-astra-stack.md  releases.md  wecom-astra-bot-setup.md
docs/superpowers/plans/: 2026-05-11-mcp-gateway-server-zh.md  2026-05-11-mcp-gateway-server.md  2026-05-12-gateway-inspect-command.md
scripts/: install-astra.sh  install.sh  prepare-release.sh
