[workspace]
resolver = "2"
members = [
    "crates/astra",
    "crates/astra-task-store",
    "crates/astra-gateway",
]

[workspace.package]
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/XuPeng-SH/astra-suite"

[workspace.dependencies]
# Local crates
astra = { path = "crates/astra" }
astra-task-store = { path = "crates/astra-task-store" }

async-trait = "0.1"

# Async runtime
tokio = { version = "1.47", features = ["macros", "net", "process", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
async-stream = "0.3"
futures-util = "0.3"

# HTTP / serialization
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["sqlite", "mysql", "runtime-tokio-rustls"] }

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
libc = "0.2"
regex = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "registry",
    "std",
    "time",
] }
uuid = { version = "1", features = ["v4", "v7"] }
rmcp = { version = "1.6", features = ["server", "transport-io"] }

[profile.release]
lto = "thin"
codegen-units = 1
