[package]
name = "astra-task-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Durable, checkpointable task-store trait and types"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
