[package]
name = "astra"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP + SSE client for the astra agent server"

[dependencies]
async-stream = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util"] }
wiremock = "0.6"
